--- a/style.css
+++ b/style.css
@@ -18,12 +18,57 @@ footer {
   padding: 10px 0;
 }
 
+#startDialog[open] {
+  background-color: #ffffff;
+  border: 2px solid rgb(51, 51, 51, 0.5);
+  border-radius: 10px;
+  box-shadow: 0 0 10px 10px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-flow: column;
+  gap: 1rem;
+}
+
+input {
+  background-color: #e0e0e0;
+  border: 0px;
+  border-radius: 10px;
+  font-size: 2rem;
+  padding: 10px;
+  overflow: hidden;
+  transition: 0.5s;
+}
+
+input:focus {
+  outline: none;
+  background-color: #f1f1f1;
+  box-shadow: 0 0 10px 5px rgb(51, 51, 51, 0.2);
+}
+
+#startDialog button {
+  background-color: #e0e0e0;
+  border: 0px;
+  border-radius: 10px;
+  font-size: 1.5rem;
+  align-self: center;
+  margin-top: 30px;
+  padding: 10px 30px;
+  background-color: #333;
+  color: #fff;
+  transition: background-color 0.3s;
+}
+
+#startDialog button:hover {
+  background-color: #666666;
+}
+
 .container {
   height: 100%;
+  width: 50vw;
   text-align: center;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   background-color: #ffffff;
   padding: 50px;
   border-radius: 10px;
@@ -42,10 +87,14 @@ p {
 }
 
 .playground {
+  width: 330px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 10px;
   margin-top: 20px;
+  background-color: #f1f1f1;
+  padding: 10px;
+  box-shadow: 0 0 10px 10px rgba(0, 0, 0, 0.1);
 }
 
 .cell {
@@ -55,7 +104,7 @@ p {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 2rem;
+  font-size: 4rem;
   cursor: pointer;
   border: 2px solid #333;
 }
@@ -63,6 +112,10 @@ p {
 .cell:hover {
   background-color: #d0d0d0;
   color: #666666;
+}
+
+.cell:disabled {
+  border: 2px solid rgb(51, 51, 51, 0.1);
 }
 
 footer a {
